# Ai-Resume-Analyzer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_model.py
chains/: resume_chain.py
prompts/: resume_prompt.py
utils/: pdf_reader.py
