[project]
name = "ai-resume-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.7",
    "langchain-mistralai>=1.1.5",
    "mistralai",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
